# gradio-for-advanced-topics-in-cg

./: .gitignore  PLZ_Verzeichnis_OKT25.xlsx  README.md  out.md  pyproject.toml
.gradio/flagged/: dataset1.csv
chat/: extended-chat.py  simple-chat.py
chromadb-data-geralt/: chroma.sqlite3
interface/: postal-codes-at.py  random-namesp.py
rag/: gaga.py  index-data.py
text-to-speech/: tts-gradio.py
