[project]
name = "gradio-for-advanced-topics-in-cg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.1.1",
    "gradio>=5.49.1",
    "markdownify>=1.2.0",
    "openai>=2.3.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
]
